--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
       [
         "expo-screen-orientation",
         {
-          "initialOrientation": "DEFAULT"
+          "initialOrientation": "ALL"
         }
       ],
       "expo-router",
