--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "sähkög",
+    "name": "sähkönäyttö",
     "slug": "electric",
     "version": "1.0.1",
     "icon": "./assets/images/icon.png",
